@@ -42,7 +42,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.lang.String.format;
@@ -70,6 +69,8 @@ public class MigrateCaseService {
     private final CaseNoteService caseNoteService;
     private final CourtService courtService;
     private final DocumentListService documentListService;
+    private static final String CORRECT_COURT_NAME = "Family Court Sitting at West London";
+    private static final String ORDER_TYPE = "orderType";
     public final MigrateRelatingLAService migrateRelatingLAService;
 
     @SuppressWarnings("unchecked")
@@ -277,7 +278,7 @@ public class MigrateCaseService {
                 return el;
             })
             .filter(el -> !el.getValue().getOrders().isEmpty())
-            .collect(toList());
+            .toList();
 
         return Map.of("hearingOrdersBundlesDrafts", bundles);
     }
@@ -330,9 +331,9 @@ public class MigrateCaseService {
                         documentsSentToParty.getValue().toBuilder()
                             .documentsSentToParty(documentsSentToParty.getValue().getDocumentsSentToParty().stream()
                                 .filter(documentSent -> !docUuidsToBeRemoved.contains(documentSent.getId()))
-                                .collect(Collectors.toList())).build());
+                                .toList()).build());
                 }
-            }).collect(Collectors.toList());
+            }).toList();
 
         return Map.of("documentsSentToParties", resultDocumentsSentToParties);
     }
@@ -344,7 +345,7 @@ public class MigrateCaseService {
         List<Element<PositionStatementChild>> positionStatementChildListResult =
             caseData.getHearingDocuments().getPositionStatementChildListV2().stream()
                 .filter(el -> !el.getId().equals(expectedPositionStatementId))
-                .collect(toList());
+                .toList();
 
         if (positionStatementChildListResult.size() != caseData.getHearingDocuments()
             .getPositionStatementChildListV2().size() - 1) {
@@ -362,7 +363,7 @@ public class MigrateCaseService {
         List<Element<PositionStatementRespondent>> positionStatementRespondentListResult =
             caseData.getHearingDocuments().getPositionStatementRespondentListV2().stream()
                 .filter(el -> !el.getId().equals(expectedPositionStatementId))
-                .collect(toList());
+                .toList();
 
         if (positionStatementRespondentListResult.size() != caseData.getHearingDocuments()
             .getPositionStatementRespondentListV2().size() - 1) {
@@ -389,19 +390,19 @@ public class MigrateCaseService {
         IncorrectCourtCodeConfig bnt = IncorrectCourtCodeConfig.builder()
             .incorrectCourtCode("117")
             .correctCourtCode("332")
-            .correctCourtName("Family Court Sitting at West London")
+            .correctCourtName(CORRECT_COURT_NAME)
             .organisationId("SPUL3VV")
             .build();
         IncorrectCourtCodeConfig hrw = IncorrectCourtCodeConfig.builder()
             .incorrectCourtCode("117")
             .correctCourtCode("332")
-            .correctCourtName("Family Court Sitting at West London")
+            .correctCourtName(CORRECT_COURT_NAME)
             .organisationId("L3HSA4L")
             .build();
         IncorrectCourtCodeConfig hlw = IncorrectCourtCodeConfig.builder()
             .incorrectCourtCode("117")
             .correctCourtCode("332")
-            .correctCourtName("Family Court Sitting at West London")
+            .correctCourtName(CORRECT_COURT_NAME)
             .organisationId("6I4Z3OO")
             .build();
         IncorrectCourtCodeConfig rct = IncorrectCourtCodeConfig.builder()
@@ -447,7 +448,7 @@ public class MigrateCaseService {
             // get the hearing with the expected UUID
             List<Element<HearingBooking>> hearingBookingsToBeRemoved =
                 hearingDetails.stream().filter(hearingBooking -> hearingIdToBeRemoved.equals(hearingBooking.getId()))
-                    .collect(toList());
+                    .toList();
 
             if (hearingBookingsToBeRemoved.isEmpty()) {
                 throw new AssertionError(format(
@@ -465,14 +466,14 @@ public class MigrateCaseService {
 
             // remove the hearing from the hearing list
             hearingDetails.removeAll(hearingBookingsToBeRemoved);
-            if (hearingDetails.size() > 0) {
+            if (!hearingDetails.isEmpty()) {
                 return Map.of(
                     "hearingDetails", hearingDetails,
                     "selectedHearingId", hearingDetails.get(hearingDetails.size() - 1).getId()
                 );
             } else {
-                Map<String, Object> ret =  new HashMap<String, Object>(Map.of(
-                    "hearingDetails", hearingDetails
+                Map<String, Object> ret = new HashMap<>(Map.of(
+                        "hearingDetails", hearingDetails
                 ));
                 ret.put("selectedHearingId", null);
                 return ret;
@@ -540,7 +541,7 @@ public class MigrateCaseService {
         List<Element<ApplicationDocument>> applicationDocuments =
             caseData.getApplicationDocuments().stream()
                 .filter(el -> !el.getId().equals(expectedApplicationDocumentId))
-                .collect(toList());
+                .toList();
 
         if (applicationDocuments.size() != caseData.getApplicationDocuments().size() - 1) {
             throw new AssertionError(format(
@@ -558,7 +559,7 @@ public class MigrateCaseService {
             caseData.getHearingDocuments().getCaseSummaryList()
                 .stream()
                 .filter(el -> !el.getId().equals(expectedHearingId))
-                .collect(toList());
+                .toList();
 
         if (caseSummaries.size() != caseData.getHearingDocuments().getCaseSummaryList().size() - 1) {
             throw new AssertionError(format(
@@ -594,7 +595,7 @@ public class MigrateCaseService {
                     } else {
                         return element;
                     }
-                }).collect(toList());
+                }).toList();
 
             return Map.of("children1", children);
         } else {
@@ -630,7 +631,7 @@ public class MigrateCaseService {
 
     public Map<String, Object> removeSpecificPlacements(CaseData caseData, UUID placementToRemove) {
         List<Element<Placement>> placementsToKeep = caseData.getPlacementEventData().getPlacements().stream()
-            .filter(x -> !x.getId().equals(placementToRemove)).collect(toList());
+            .filter(x -> !x.getId().equals(placementToRemove)).toList();
         caseData.getPlacementEventData().setPlacements(placementsToKeep);
 
         List<Element<Placement>> nonConfidentialPlacementsToKeep = caseData.getPlacementEventData()
@@ -653,7 +654,7 @@ public class MigrateCaseService {
                                                        UUID expectedOrderId) {
         Long caseId = caseData.getId();
         List<Element<HearingOrder>> draftUploadedCMOs = caseData.getDraftUploadedCMOs()
-            .stream().filter(el -> !el.getId().equals(expectedOrderId)).collect(toList());
+            .stream().filter(el -> !el.getId().equals(expectedOrderId)).toList();
 
         if (draftUploadedCMOs.size() != caseData.getDraftUploadedCMOs().size() - 1) {
             throw new AssertionError(format(
@@ -668,7 +669,7 @@ public class MigrateCaseService {
                                                                 UUID expectedHearingOrderBundleId) {
         Long caseId = caseData.getId();
         List<Element<HearingOrdersBundle>> hearingOrdersBundlesDrafts = caseData.getHearingOrdersBundlesDrafts()
-            .stream().filter(el -> !el.getId().equals(expectedHearingOrderBundleId)).collect(toList());
+            .stream().filter(el -> !el.getId().equals(expectedHearingOrderBundleId)).toList();
 
         if (hearingOrdersBundlesDrafts.size() != caseData.getHearingOrdersBundlesDrafts().size() - 1) {
             throw new AssertionError(format(
@@ -684,7 +685,7 @@ public class MigrateCaseService {
                 String currentName = el.getValue().getDocumentName();
                 el.getValue().setDocumentName(stripIllegalCharacters(currentName));
                 return el;
-            }).collect(toList());
+            }).toList();
 
         return Map.of("applicationDocuments", updatedList);
     }
@@ -705,7 +706,7 @@ public class MigrateCaseService {
         UUID targetMessageId = UUID.fromString(messageId);
         List<Element<JudicialMessage>> resultList = messages.stream()
             .filter(message -> !message.getId().equals(targetMessageId))
-            .collect(toList());
+            .toList();
 
         if (resultList.size() != messages.size() - 1) {
             throw new AssertionError(format("Migration {id = %s, case reference = %s}, judicial message %s not found",
@@ -773,7 +774,7 @@ public class MigrateCaseService {
         List<Element<SupportingEvidenceBundle>> newSupportingEvidenceBundle =
             elementToBeUpdated.getValue().getSupportingEvidenceBundle().stream()
                 .filter(el -> !expectedDocId.equals(el.getId()))
-                .collect(toList());
+                .toList();
         if (newSupportingEvidenceBundle.size() != elementToBeUpdated.getValue().getSupportingEvidenceBundle()
             .size() - 1) {
             throw new AssertionError(format(
@@ -805,7 +806,7 @@ public class MigrateCaseService {
         List<Element<SupportingEvidenceBundle>> furtherEvidenceDocumentsSolicitor =
             caseData.getFurtherEvidenceDocumentsSolicitor().stream()
                 .filter(el -> !expectedDocId.equals(el.getId()))
-                .collect(toList());
+                .toList();
 
         if (furtherEvidenceDocumentsSolicitor.size() != caseData.getFurtherEvidenceDocumentsSolicitor().size() - 1) {
             throw new AssertionError(format(
@@ -829,12 +830,12 @@ public class MigrateCaseService {
 
         Optional<Map> orders = Optional.ofNullable((Map) caseDetails.getData().get("orders"));
         if (orders.isPresent()) {
-            Optional<List<String>> orderType = Optional.ofNullable((List<String>) orders.get().get("orderType"));
+            Optional<List<String>> orderType = Optional.ofNullable((List<String>) orders.get().get(ORDER_TYPE));
             if (orderType.isPresent() && orderType.get().contains(invalidOrderType)) {
                 Map ordersMap = new HashMap<>(orders.get());
-                List<String> newOrderType = new ArrayList<>(((List<String>) ordersMap.get("orderType")));
+                List<String> newOrderType = new ArrayList<>(((List<String>) ordersMap.get(ORDER_TYPE)));
                 newOrderType.replaceAll(target -> target.equals(invalidOrderType) ? validOrderType : target);
-                ordersMap.put("orderType", newOrderType);
+                ordersMap.put(ORDER_TYPE, newOrderType);
                 return Map.of("orders", ordersMap);
             } else {
                 throw new AssertionError(format("Migration {id = %s}, case does not have [orders.orderType] "
@@ -862,7 +863,7 @@ public class MigrateCaseService {
         List<Element<CourtBundle>> newCourtBundleList =
             elementToBeUpdated.getValue().getCourtBundle().stream()
                 .filter(el -> !expectedBundleId.equals(el.getId()))
-                .collect(toList());
+                .toList();
         if (newCourtBundleList.size() != elementToBeUpdated.getValue().getCourtBundle()
             .size() - 1) {
             throw new AssertionError(format(
